# erika-esp

./: .gitignore
erika_cloud/: Dockerfile  bottle_app.py  models.py  pyproject.toml  requirements.txt
erika_cloud/erika_cloud_django/: Dockerfile  docker-compose.yaml  poetry.toml  pyproject.toml
erika_cloud/erika_cloud_django/docker/: supervisord.conf
erika_cloud/erika_cloud_django/erika_cloud/: api.py  settings.py  urls.py  wsgi.py
erika_cloud/erika_cloud_django/erika_cloud/utils/: dj_mail_utils.py  mqtt_handling.py
erika_cloud/erika_cloud_django/frontend/static/frontend/js/: mainpage.js
erika_cloud/erika_cloud_django/frontend/templates/: index.html  index1.html
erika_cloud/erika_cloud_django/mqtt_handler/: apps.py  handlers.py
erika_cloud/erika_cloud_django/templates/: base_generic.html  user_dashboard.html
erika_cloud/erika_cloud_django/templates/account/email/: password_reset_key_subject.txt
erika_cloud/erika_cloud_django/templates/registration/: set_password_email.html
erika_cloud/erika_cloud_django/tests/: test_new_typewriter_w_users.py
erika_cloud/erika_cloud_django/typewriter/: admin.py  api.py  apps.py  models.py  schemas.py  urls.py  views.py
erika_cloud/erika_cloud_django/typewriter/migrations/: 0001_initial.py  0002_remove_typewriter_user_email_and_more.py  0003_textdata_typewriter.py
erika_cloud/erika_cloud_django/typewriter/utils/: mqtt_utils.py
erika_cloud/utils/: mail_utils.py  mqqt.py
erika_cloud/views/: typewriters_select.tpl.html
erika_cloud_django/: Dockerfile  docker-compose.yaml  manage.py  pytest.ini
erika_cloud_django/erika_cloud/: Readme.md  asgi.py  settings.py
erika_cloud_django/erika_cloud/utils/: dj_mail_utils.py
erika_cloud_django/frontend/: views.py
erika_cloud_django/frontend/static/frontend/css/: main.css  main_page.css
erika_cloud_django/frontend/templates/: index.html  index1.html
erika_cloud_django/mqtt_handler/: handlers.py
erika_cloud_django/templates/account/email/: password_reset_key_message.txt
erika_cloud_django/typewriter/: api.py  views.py
