[tool.poetry]
name = "erika-cloud-django"
version = "0.1.0"
description = "Cloud Backend for Erika Typrwriters based on Django"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-ninja = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
